@@ -89,6 +89,10 @@ Core and builtins
 Library
 -------
 
+- Fix codecs.EncodedFile which did not use file_encoding in 2.5.0, and
+  fix all codecs file wrappers to work correctly with the "with"
+  statement (bug #1586513).
+
 - Lib/modulefinder.py now handles absolute and relative imports
   correctly.
 
